--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gl-icons-assets",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Common icons to be used on web applications.",
   "assets": "assets",
   "main": "assets/img",
@@ -9,11 +9,11 @@
   ],
   "scripts": {
     "copy-files": "npm run copy-main && npm run copy-md",
-    "copy-main": "copyfiles -a -u2 src/assets/img/** assets",
-    "copy-md": "copyfiles -a -u1 src/README.md assets",
+    "copy-main": "copyfiles -a -u2 \"src/assets/img/**\" assets",
+    "copy-md": "copyfiles -a -u1 \"src/README.md\" assets",
     "clean": "shx rm -rf assets",
     "production": "npm run clean && npm run copy-files",
-    "publish": "npm publish && npm run clean"
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
